@@ -49,6 +49,7 @@
 - fix master map bogus keywork match.
 - fix fix map entry duplicate offset detection.
 - probe each nfs version in turn for singleton mounts.
+- wait for master map available at start.
 
 25/07/2012 autofs-5.0.7
 =======================
